<resources>
    <string name="app_name">Weather</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Weather</string>
    <string name="nav_header_subtitle">mad44.ismailia@ITI.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_favorites">Saved Locations</string>
    <string name="menu_settings">Settings</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit_unit">°F</string>
    <string name="celsius_unit">°C</string>
    <string name="mph">mph</string>
    <string name="mps">mps</string>
    <string name="internet_connection">Please check your internet connection.</string>
    <string name="turn_location">Turn on Location</string>
    <string name="unknown">unknown</string>
    <string name="loading">Loading</string>
    <string name="exist">Location exists</string>
    <string name="selected">Location Selected</string>
    <string name="init">Select your way</string>
    <string name="done">Done</string>
    <string name="problem">Failure</string>
    <string name="deleted">Item Deleted</string>
    <string name="undo">Undo</string>
    <string name="insert_fav">Inserted To Saved Locations</string>
    <string name="already">already exists</string>
    <string name="kelvin_unit">°K</string>
    <string name="menu_alert">Alert</string>
    <string name="textViewFavCountry">Country</string>
    <string name="textViewTemp">17</string>
    <string name="textViewWeatherDescription">Cloudy</string>
    <string name="textViewLastUpdate">Last Update</string>
    <string name="textViewDate">Mar 11,2024 - Mon 12:2 Am</string>
    <string name="textViewCloudsValue">22%</string>
    <string name="textViewClouds">Clouds</string>
    <string name="textViewWind">Wind</string>
    <string name="textViewHumidity">Humidity</string>
    <string name="textViewPressureUnit">hPa</string>
    <string name="textViewPressure">Pressure</string>
    <string name="textViewVisibilityValue">10000%</string>
    <string name="textViewVisibility">Visibility</string>
    <string name="textViewUVValue">0%</string>
    <string name="textViewUV">Ultraviolet</string>
    <string name="textViewToday">Today</string>
    <string name="today">Today</string>
    <string name="now">Now</string>
    <string name="textViewWeekly">Weekly Forecasts</string>
    <string name="textViewSearch">Search Here</string>
    <string name="buttonPickLocation">Pick Location</string>
    <string name="textViewTemprature">Temperature</string>
    <string name="textViewWindSpeed">Wind Speed</string>
    <string name="miles_hour">Miles/Hour</string>
    <string name="meter_second">Meter/Second</string>
    <string name="language">Language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="theme">Theme</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="location">Location</string>
    <string name="map">Map</string>
    <string name="day_of_week">WED</string>
    <string name="_3_am">3 AM</string>
    <string name="_20">20</string>
    <string name="no_warnings">There is no warnings at the moment</string>
    <string name="warnings">Warning: </string>
    <string name="at">at: </string>
    <string name="Dismiss">Dismiss </string>
    <string name="weather_alert">Weather Alert</string>
    <string name="weather_alert_description">Weather Alert Description</string>
    <string name="starts_at">Starts at:</string>
    <string name="ends_at">Ends at:</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="select_location">Select Location</string>
    <string name="notification">Notification</string>
    <string name="alarm">Alarm</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="endtimafterstart">End Date must be after Start Date.</string>
    <string name="km">KM</string>
    <string name="there_is_no_saved_locations_yet">There is no saved locations yet</string>
    <string name="ask_del_fav">del</string>
    <string name="del_item">delete this</string>
    <string name="notification_permission_title">Permission Requerd</string>
    <string name="notification_permmission_desc">Please Enable Notification Permission</string>
    <string name="permission_request">Permission Request</string>
    <string name="aler_header">Alerts</string>

</resources>