<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/baseline_add_location_24"
            android:title="@string/menu_favorites" />
        <item
            android:id="@+id/nav_alert"
            android:icon="@drawable/baseline_add_alert_24"
            android:title="@string/menu_alert"
            />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_suggest_24"
            android:title="@string/menu_settings" />
    </group>
</menu>