<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.view.SettingsFragment"
    android:background="@color/background_color">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="8dp"
        android:paddingVertical="16dp">
        <TextView
            android:id="@+id/textViewTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/textViewTemprature"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewTemp"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="400dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@id/textViewTemp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textViewTemp"
            app:layout_constraintTop_toTopOf="@id/textViewTemp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintTemp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/kelvinButton"
                    android:layout_width="80dp"
                    android:layout_height="48dp"
                    android:textSize="14sp"
                    android:background="@color/white"
                    android:text="@string/kelvin"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/fahrenheitButton"
                    android:layout_width="100dp"
                    android:layout_height="48dp"
                    android:textSize="14sp"
                    android:background="@color/white"
                    android:text="@string/fahrenheit"
                    android:textAllCaps="false"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/kelvinButton"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/celsiusButton"
                    android:layout_width="80dp"
                    android:layout_height="48dp"
                    android:textSize="14sp"
                    android:background="@color/white"
                    android:text="@string/celsius"
                    android:textAllCaps="false"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/fahrenheitButton"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/textViewWindSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            android:text="@string/textViewWindSpeed"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTemp" />
        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewWindSpeed"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="400dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@id/textViewWindSpeed"
            app:layout_constraintEnd_toEndOf="@+id/cardViewTemp"
            app:layout_constraintStart_toStartOf="@+id/cardViewTemp"
            app:layout_constraintTop_toTopOf="@id/textViewWindSpeed">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintWindSpeed"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/mphButton"
                    android:layout_width="110dp"
                    android:layout_height="48dp"
                    android:textSize="14sp"
                    android:background="@color/white"
                    android:text="@string/miles_hour"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/mpsButton"
                    android:layout_width="110dp"
                    android:layout_height="48dp"
                    android:textSize="14sp"
                    android:background="@color/white"
                    android:text="@string/meter_second"
                    android:textAllCaps="false"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/mphButton"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/textViewLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            android:text="@string/language"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewWindSpeed" />
        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewLanguage"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="400dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@id/textViewLanguage"
            app:layout_constraintEnd_toEndOf="@id/cardViewTemp"
            app:layout_constraintStart_toStartOf="@+id/cardViewTemp"
            app:layout_constraintTop_toTopOf="@id/textViewLanguage">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLanguage"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/arabicButton"
                    android:layout_width="110dp"
                    android:layout_height="48dp"
                    android:textSize="14sp"
                    android:background="@color/white"
                    android:text="@string/arabic"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/englishButton"
                    android:layout_width="110dp"
                    android:layout_height="48dp"
                    android:textSize="14sp"
                    android:background="@color/white"
                    android:text="@string/english"
                    android:textAllCaps="false"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/arabicButton"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/textViewTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            android:text="@string/theme"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLanguage" />
        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewTheme"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="400dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@id/textViewTheme"
            app:layout_constraintEnd_toEndOf="@id/cardViewTemp"
            app:layout_constraintStart_toStartOf="@+id/cardViewTemp"
            app:layout_constraintTop_toTopOf="@id/textViewTheme">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/darkButton"
                    android:layout_width="110dp"
                    android:layout_height="48dp"
                    android:textSize="14sp"
                    android:background="@color/white"
                    android:text="@string/dark"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/lightButton"
                    android:layout_width="110dp"
                    android:layout_height="48dp"
                    android:textSize="14sp"
                    android:background="@color/white"
                    android:text="@string/light"
                    android:textAllCaps="false"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/darkButton"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/textViewLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            android:text="@string/location"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTheme" />
        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewLocation"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="400dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@id/textViewLocation"
            app:layout_constraintEnd_toEndOf="@id/cardViewTemp"
            app:layout_constraintStart_toStartOf="@+id/cardViewTemp"
            app:layout_constraintTop_toTopOf="@id/textViewLocation">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLocation"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/locationButton"
                    android:layout_width="110dp"
                    android:layout_height="48dp"
                    android:textSize="14sp"
                    android:background="@color/white"
                    android:text="@string/location"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/mapButton"
                    android:layout_width="110dp"
                    android:layout_height="48dp"
                    android:textSize="14sp"
                    android:background="@color/white"
                    android:text="@string/map"
                    android:textAllCaps="false"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/locationButton"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>