<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.weather.ui.home.view.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_initPrefFragment"
            app:destination="@id/startUp" />
        <action
            android:id="@+id/action_nav_home_to_nav_fav"
            app:destination="@id/nav_fav" />
    </fragment>

    <fragment
        android:id="@+id/nav_fav"
        android:name="com.example.weather.ui.favorite.view.FavFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_FavoriteFragment_to_mapFragment"
            app:destination="@id/mapFragment" />
        <action
            android:id="@+id/action_nav_fav_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.weather.ui.settings.view.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_nav_settings_to_mapFragment"
            app:destination="@id/mapFragment" />
    </fragment>
    <fragment
        android:id="@+id/mapFragment"
        android:name="com.example.weather.ui.location.view.LocationFragment"
        android:label="Map"
        tools:layout="@layout/fragment_map" >
        <argument
            android:name="isFromSettings"
            app:argType="boolean"
            android:defaultValue="false" />
        <argument
            android:name="isFromFavorite"
            app:argType="boolean"
            android:defaultValue="false" />
        <argument
            android:name="isFromAlerts"
            app:argType="boolean"
            android:defaultValue="false" />
        <action
            android:id="@+id/action_mapFragment_to_nav_alert"
            app:destination="@id/nav_alert" />
    </fragment>
    <fragment
        android:id="@+id/splashFragment"
        android:name="com.example.weather.ui.splash.view.SplashFragment"
        android:label="Splash"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splashFragment_to_initPrefFragment"
            app:destination="@id/startUp" />
        <action
            android:id="@+id/action_splashFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/startUp"
        android:name="com.example.weather.ui.startup.view.StartUpFragment"
        android:label="Hello">
        <action
            android:id="@+id/action_initPrefFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/nav_alert"
        android:name="com.example.weather.ui.alerts.AlertFragment"
        android:label="@string/aler_header"
        tools:layout="@layout/fragment_alerts">
        <action
            android:id="@+id/action_alertsFragment_to_mapFragment"
            app:destination="@id/mapFragment" />
        <argument
            android:name="latLng"
            android:defaultValue="@null"
            app:argType="com.example.weather.model.response.LocationLatLngPojo"
            app:nullable="true" />
    </fragment>
</navigation>