<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginTop="8dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_height="wrap_content"
    android:id="@+id/constraintClick">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewDay"
        app:layout_constraintStart_toEndOf="@+id/textViewDay"
        app:layout_constraintTop_toTopOf="@+id/textViewDay"
        app:srcCompat="@drawable/cloudy" />

    <TextView
        android:id="@+id/textViewDay"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/day_of_week"
        android:textSize="14sp"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/textViewWeatherDescription"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/textViewHigh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/textViewCloudsValue"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/textViewLow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:textColor="@color/text_color"
        android:text="@string/textViewCloudsValue"
        app:layout_constraintBottom_toBottomOf="@+id/textViewHigh"
        app:layout_constraintEnd_toStartOf="@+id/textViewHigh"
        app:layout_constraintTop_toTopOf="@+id/textViewHigh" />
</androidx.constraintlayout.widget.ConstraintLayout>